test/users/ssridhar/atomic/test_atomic_on_clause.good
$CHPL_HOME/modules/internal/ChapelBase.chpl:686: In function '__tx_clone_~chpl_destroy':
$CHPL_HOME/modules/internal/ChapelBase.chpl:688: warning: Ignoring SYNC_* primitivies [insertTransactions.cpp:450]
$CHPL_HOME/modules/internal/ChapelDistribution.chpl:175: In function '__tx_clone_destroyArr':
$CHPL_HOME/modules/internal/ChapelDistribution.chpl:183: error: number of actuals does not match number of formals [expr.cpp:510]
