test/users/ssridhar/atomic/test_atomic_on_clause.future
feature request: support on clause within atomic blocks. 
